--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ fnv = "1.0"
 hashbrown = { version = "0.12", features = ["inline-more", "serde"], default_features = false }
 pulldown-cmark = { version = "0.9", default_features = false }
 cmark-syntax = "0.4"
+mimalloc = { version = "0.1.37", default-features = false }
 
 # Cargo doesn't support binary-only dependencies yet.
 toml = { version = "0.5.9", optional = true }
